--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
     <title>Frontend Mentor | Manage landing page</title>
   </head>
   <body>
-    <header>
+    <header class="header">
       <div>
-        <img src="images/logo.svg" alt="Manage" />
+        <img src="images/logo.svg" alt="Manage" class="header__logo" />
       </div>
       <nav>
-        <button><img src="images/icon-hamburger.svg" alt="Menu" /></button>
-        <ul>
-          <li><a href="">Pricing</a></li>
-          <li><a href="">Product</a></li>
-          <li><a href="">About Us</a></li>
-          <li><a href="">Careers</a></li>
-          <li><a href="">Community</a></li>
+        <button class="header__menu__button"><img src="images/icon-hamburger.svg" alt="Menu" /></button>
+        <ul class="header__menu">
+          <li class="header__menu__item"><a href="" class="header__menu__link">Pricing</a></li>
+          <li class="header__menu__item"><a href="" class="header__menu__link">Product</a></li>
+          <li class="header__menu__item"><a href="" class="header__menu__link">About Us</a></li>
+          <li class="header__menu__item"><a href="" class="header__menu__link">Careers</a></li>
+          <li class="header__menu__item"><a href="" class="header__menu__link">Community</a></li>
         </ul>
       </nav>
-      <button>Get Started</button>
+      <button class="button header__button">Get Started</button>
     </header>
     <section>
       <div><img src="images/illustration-intro.svg" alt="" /></div>
