--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
       </nav>
       <button class="button header__button">Get Started</button>
     </header>
-    <section>
-      <div><img src="images/illustration-intro.svg" alt="" /></div>
+    <section class="intro">
+      <div><img src="images/illustration-intro.svg" alt="" class="intro__image" /></div>
       <div>
-        <h1>Bring everyone together to build better products.</h1>
-        <p>Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
-        <button>Get Started</button>
+        <h1 class="title intro__title">Bring everyone together to build better products.</h1>
+        <p class="paragraph">Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
+        <button class="button intro__button">Get Started</button>
       </div>
     </section>
     <section>
