Simplify section styled for mobile view

--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
       </div>
       <button>Get Started</button>
     </section>
-    <section>
-      <h2>Simplify how your team works today.</h2>
-      <button>Get Started</button>
+    <section class="simplify">
+      <h2 class="simplify__title">Simplify how your team works today.</h2>
+      <button class="button simplify__button">Get Started</button>
     </section>
     <footer>
       <div>
