Intro Area css for desktop and responsiveness

--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
       <button class="button header__button">Get Started</button>
     </header>
     <section class="intro">
-      <div><img src="images/illustration-intro.svg" alt="" class="intro__image" /></div>
-      <div>
+      <div class="intro__image-block"><img src="images/illustration-intro.svg" alt="" class="intro__image" /></div>
+      <div class="intro__text-block">
         <h1 class="title intro__title">Bring everyone together to build better products.</h1>
-        <p class="paragraph">Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.</p>
+        <p class="paragraph intro__paragraph">
+          Manage makes it simple for software teams to plan day-to-day tasks while keeping the larger team goals in view.
+        </p>
         <button class="button intro__button">Get Started</button>
       </div>
     </section>
