Added functionality for the input for sending email to show message (error or not)

--- a/index.html
+++ b/index.html
@@ -185,9 +185,11 @@
       <div class="footer__newsletter">
         <form action="" class="footer__newsletter__form">
           <label for="email" class="screen-reader">Email</label>
-          <input type="email" name="email" id="email" placeholder="Updates in your inbox…" class="footer__newsletter__input" />
+          <input type="text" name="email" id="email" placeholder="Updates in your inbox…" class="footer__newsletter__input" />
           <input type="submit" value="Go" class="footer__newsletter__submit-button" />
         </form>
+        <p class="tooltip footer__tooltip">Please insert a valid email</p>
+        <p class="tooltip footer__tooltip-two">Your email address has been sent</p>
       </div>
       <p class="footer__copyright">Copyright 2020. All Rights Reserved</p>
       <p class="attribution">
