About us section styled for desktop and responsiveness

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="about">
       <div class="about__intro">
         <h2 class="title about__intro__title">What’s different about Manage?</h2>
-        <p class="paragraph">
+        <p class="paragraph about__intro__paragraph">
           Manage provides all the functionality your team needs, without the complexity. Our software is tailor-made for modern digital product teams.
         </p>
       </div>
