--- a/index.html
+++ b/index.html
@@ -71,41 +71,43 @@
         </p>
       </div>
     </section>
-    <section>
-      <h2>What they’ve said</h2>
-      <div>
-        <div><img src="images/avatar-anisha.png" alt="" /></div>
-        <p>Anisha Li</p>
-        <p>
+    <section class="testimonials">
+      <h2 class="title testimonials__title">What they’ve said</h2>
+      <div class="testimonial">
+        <div class="testimonial__avatar-block">
+          <img src="images/avatar-anisha.png" alt="" class="testimonial__avatar" />
+        </div>
+        <p class="testimonial__author">Anisha Li</p>
+        <p class="paragraph">
           “Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone
           motivated.”
         </p>
       </div>
-      <div>
-        <div><img src="images/avatar-ali.png" alt="" /></div>
-        <p>Ali Bravo</p>
-        <p>
+      <div class="testimonial">
+        <div class="testimonial__avatar-block"><img src="images/avatar-ali.png" alt="" class="testimonial__avatar" /></div>
+        <p class="testimonial__author">Ali Bravo</p>
+        <p class="paragraph">
           “We have been able to cancel so many other subscriptions since using Manage. There is no more cross-channel confusion and everyone is much
           more focused.”
         </p>
       </div>
-      <div>
-        <div><img src="images/avatar-richard.png" alt="" /></div>
-        <p>Richard Watts</p>
-        <p>
+      <div class="testimonial">
+        <div class="testimonial__avatar-block"><img src="images/avatar-richard.png" alt="" class="testimonial__avatar" /></div>
+        <p class="testimonial__author">Richard Watts</p>
+        <p class="paragraph">
           “Manage allows us to provide structure and process. It keeps us organized and focused. I can’t stop recommending them to everyone I talk
           to!”
         </p>
       </div>
-      <div>
-        <div><img src="images/avatar-shanai.png" alt="" /></div>
-        <p>Shanai Gough</p>
-        <p>
+      <div class="testimonial">
+        <div class="testimonial__avatar-block"><img src="images/avatar-shanai.png" alt="" class="testimonial__avatar" /></div>
+        <p class="testimonial__author">Shanai Gough</p>
+        <p class="paragraph">
           “Their software allows us to track, manage and collaborate on our projects from anywhere. It keeps the whole team in-sync without being
           intrusive.”
         </p>
       </div>
-      <button>Get Started</button>
+      <button class="button testimonial__button">Get Started</button>
     </section>
     <section class="simplify">
       <h2 class="simplify__title">Simplify how your team works today.</h2>
