Added the dots testimonial slider for mobile

--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
           intrusive.”
         </p>
       </div>
+      <ul class="testimonials__dots">
+        <li class="testimonials__dot"></li>
+        <li class="testimonials__dot active"></li>
+        <li class="testimonials__dot"></li>
+        <li class="testimonials__dot"></li>
+      </ul>
       <button class="button testimonial__button">Get Started</button>
     </section>
     <section class="simplify">
