Added functionality for testimonial slider

--- a/index.html
+++ b/index.html
@@ -73,6 +73,12 @@
     </section>
     <section class="testimonials">
       <h2 class="title testimonials__title">What they’ve said</h2>
+      <ul class="testimonials__dots">
+        <li><button class="testimonials__dot" aria-label="See Anisha Li's Testimonial."></button></li>
+        <li><button class="testimonials__dot active" aria-label="See Ali Bravo's Testimonial."></button></li>
+        <li><button class="testimonials__dot" aria-label="See Richard Watts' Testimonial."></button></li>
+        <li><button class="testimonials__dot" aria-label="See Shanai Gough's Testimonial."></button></li>
+      </ul>
       <div class="testimonial">
         <div class="testimonial__avatar-block">
           <img src="images/avatar-anisha.png" alt="" class="testimonial__avatar" />
@@ -83,7 +89,7 @@
           motivated.”
         </p>
       </div>
-      <div class="testimonial">
+      <div class="testimonial shown">
         <div class="testimonial__avatar-block"><img src="images/avatar-ali.png" alt="" class="testimonial__avatar" /></div>
         <p class="testimonial__author">Ali Bravo</p>
         <p class="paragraph">
@@ -107,12 +113,6 @@
           intrusive.”
         </p>
       </div>
-      <ul class="testimonials__dots">
-        <li class="testimonials__dot"></li>
-        <li class="testimonials__dot active"></li>
-        <li class="testimonials__dot"></li>
-        <li class="testimonials__dot"></li>
-      </ul>
       <button class="button testimonial__button">Get Started</button>
     </section>
     <section class="simplify">
