--- a/index.html
+++ b/index.html
@@ -79,39 +79,41 @@
         <li><button class="testimonials__dot" aria-label="See Richard Watts' Testimonial."></button></li>
         <li><button class="testimonials__dot" aria-label="See Shanai Gough's Testimonial."></button></li>
       </ul>
-      <div class="testimonial">
-        <div class="testimonial__avatar-block">
-          <img src="images/avatar-anisha.png" alt="" class="testimonial__avatar" />
+      <div class="testimonials__block">
+        <div class="testimonial">
+          <div class="testimonial__avatar-block">
+            <img src="images/avatar-anisha.png" alt="" class="testimonial__avatar" />
+          </div>
+          <p class="testimonial__author">Anisha Li<span class="screen-reader">.</span></p>
+          <p class="paragraph">
+            “Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone
+            motivated.”
+          </p>
         </div>
-        <p class="testimonial__author">Anisha Li</p>
-        <p class="paragraph">
-          “Manage has supercharged our team’s workflow. The ability to maintain visibility on larger milestones at all times keeps everyone
-          motivated.”
-        </p>
-      </div>
-      <div class="testimonial shown">
-        <div class="testimonial__avatar-block"><img src="images/avatar-ali.png" alt="" class="testimonial__avatar" /></div>
-        <p class="testimonial__author">Ali Bravo</p>
-        <p class="paragraph">
-          “We have been able to cancel so many other subscriptions since using Manage. There is no more cross-channel confusion and everyone is much
-          more focused.”
-        </p>
-      </div>
-      <div class="testimonial">
-        <div class="testimonial__avatar-block"><img src="images/avatar-richard.png" alt="" class="testimonial__avatar" /></div>
-        <p class="testimonial__author">Richard Watts</p>
-        <p class="paragraph">
-          “Manage allows us to provide structure and process. It keeps us organized and focused. I can’t stop recommending them to everyone I talk
-          to!”
-        </p>
-      </div>
-      <div class="testimonial">
-        <div class="testimonial__avatar-block"><img src="images/avatar-shanai.png" alt="" class="testimonial__avatar" /></div>
-        <p class="testimonial__author">Shanai Gough</p>
-        <p class="paragraph">
-          “Their software allows us to track, manage and collaborate on our projects from anywhere. It keeps the whole team in-sync without being
-          intrusive.”
-        </p>
+        <div class="testimonial shown">
+          <div class="testimonial__avatar-block"><img src="images/avatar-ali.png" alt="" class="testimonial__avatar" /></div>
+          <p class="testimonial__author">Ali Bravo<span class="screen-reader">.</span></p>
+          <p class="paragraph">
+            “We have been able to cancel so many other subscriptions since using Manage. There is no more cross-channel confusion and everyone is much
+            more focused.”
+          </p>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial__avatar-block"><img src="images/avatar-richard.png" alt="" class="testimonial__avatar" /></div>
+          <p class="testimonial__author">Richard Watts<span class="screen-reader">.</span></p>
+          <p class="paragraph">
+            “Manage allows us to provide structure and process. It keeps us organized and focused. I can’t stop recommending them to everyone I talk
+            to!”
+          </p>
+        </div>
+        <div class="testimonial">
+          <div class="testimonial__avatar-block"><img src="images/avatar-shanai.png" alt="" class="testimonial__avatar" /></div>
+          <p class="testimonial__author">Shanai Gough<span class="screen-reader">.</span></p>
+          <p class="paragraph">
+            “Their software allows us to track, manage and collaborate on our projects from anywhere. It keeps the whole team in-sync without being
+            intrusive.”
+          </p>
+        </div>
       </div>
       <button class="button testimonial__button">Get Started</button>
     </section>
