Fixed menu style and refactored menu functionality JS

--- a/index.html
+++ b/index.html
@@ -10,23 +10,22 @@
     <title>Frontend Mentor | Manage landing page</title>
   </head>
   <body>
+    <div class="background-fade"></div>
     <header class="header">
-      <div>
+      <div class="header__image-block">
         <img src="images/logo.svg" alt="Manage" class="header__logo" />
       </div>
-      <nav>
+      <nav class="header__nav">
         <button class="header__menu__button" aria-controls="header__menu" aria-expanded="false">
           <img src="images/icon-hamburger.svg" alt="Menu" />
         </button>
-        <div class="header__menu__container">
-          <ul id="header__menu" class="header__menu hidden">
-            <li class="header__menu__item"><a href="" class="header__menu__link">Pricing</a></li>
-            <li class="header__menu__item"><a href="" class="header__menu__link">Product</a></li>
-            <li class="header__menu__item"><a href="" class="header__menu__link">About Us</a></li>
-            <li class="header__menu__item"><a href="" class="header__menu__link">Careers</a></li>
-            <li class="header__menu__item"><a href="" class="header__menu__link">Community</a></li>
-          </ul>
-        </div>
+        <ul id="header__menu" class="header__menu hidden">
+          <li class="header__menu__item"><a href="" class="header__menu__link">Pricing</a></li>
+          <li class="header__menu__item"><a href="" class="header__menu__link">Product</a></li>
+          <li class="header__menu__item"><a href="" class="header__menu__link">About Us</a></li>
+          <li class="header__menu__item"><a href="" class="header__menu__link">Careers</a></li>
+          <li class="header__menu__item"><a href="" class="header__menu__link">Community</a></li>
+        </ul>
       </nav>
       <button class="button header__button">Get Started</button>
     </header>
